--- a/index.html
+++ b/index.html
@@ -210,7 +210,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SETDB2VBV0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-SETDB2VBV0');
+</script>
 <body>
     <!-- Orbs -->
     <div class="orb"></div>
